Resolves HELIO-994: Tombstone an item

--- a/app/views/fulcrum/_reports.html.erb
+++ b/app/views/fulcrum/_reports.html.erb
@@ -3,5 +3,6 @@
 <% end %>
 <h1>Reports</h1>
 <ul>
+  <li><%= link_to "Tombstones", tombstones_path %></li>
   <li><%= link_to "COUNTER Reports", customers_path %></li>
 </ul>
