--- a/app/views/hyrax/file_sets/_attributes.html.erb
+++ b/app/views/hyrax/file_sets/_attributes.html.erb
@@ -3,7 +3,7 @@
     <li role="presentation" class="active"><a id="tab-info" href="#info" data-toggle="tab" role="tab" aria-controls="info" aria-selected="true" tabindex="0">Info</a></li>
     <li role="presentation"><a id="tab-permissions" href="#permissions" data-toggle="tab" role="tab" aria-controls="permissions" aria-selected="false"   tabindex="-1">Permissions</a></li>
     <li id="stats-tab" role="presentation"><a id="tab-stats" href="#stats" data-toggle="tab" role="tab" aria-controls="stats" aria-selected="false" tabindex="-1">Stats</a></li>
-    <% unless presenter.external_resource? %>
+    <% unless presenter.external_resource? || presenter.tombstone? %>
     <li role="presentation"><a id="tab-technical-info" href="#technical-info" data-toggle="tab" role="tab" aria-controls="technical-info" aria-selected="false"   tabindex="-1">Technical Info</a></li>
     <% end %>
   </ul>
