oops, double ERB tag

--- a/app/views/hyrax/base/_form_metadata.html.erb
+++ b/app/views/hyrax/base/_form_metadata.html.erb
@@ -1,4 +1,4 @@
-<%# pulled from https://raw.githubusercontent.com/samvera/hyrax/2.5.1/app/views/hyrax/base/_form_metadata.html.erb %> %>
+<%# pulled from https://raw.githubusercontent.com/samvera/hyrax/2.5.1/app/views/hyrax/base/_form_metadata.html.erb %>
 <div class="base-terms">
   <% f.object.primary_terms.each do |term| %>
     <%= render_edit_field_partial(term, f: f) %>
