HELIO-2851 - modify show page partials for file sets to create two layout options, one of them supporting the wide display of an interactive map

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -800,7 +800,7 @@ footer.press {
 
 }
 ///////////////////////////////////
-// ASSET PAGES
+// ASSET/RESOURCE PAGES
 ///////////////////////////////////
 .asset-navigation {
   a.previous span {
@@ -862,6 +862,17 @@ footer.press {
     overflow:hidden;
   }
 
+  // MAPS
+
+  .map {
+    h1 {
+      margin-bottom: 1em;
+    }
+
+    iframe {
+      border: 0;
+    }
+  }
 
   // AUDIO and VIDEO - Able Player
   .able-wrapper {
