--- a/app/views/hyrax/file_sets/media_display/_map.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_map.html.erb
@@ -2,6 +2,6 @@
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
 
-<iframe height=600px width=100% src=<%= "#{main_app.map_file_url(file_set.id, file: 'index', format: 'html')}" %> allowfullscreen>
+<iframe title="<%= @presenter.title %>" height="600px" width="100%" src="<%= "#{main_app.map_file_url(file_set.id, file: 'index', format: 'html')}" %>" allow="fullscreen">
   Your browser doesn't support iframes!
 </iframe>
