--- a/app/views/tombstones/index.html.erb
+++ b/app/views/tombstones/index.html.erb
@@ -2,20 +2,24 @@
 <div id="maincontent">
   <h1>Tombstones</h1>
   <div class="col-md-12">
-    <div class="col-md-3">Monograph</div>
-    <div class="col-md-3">FileSet</div>
+    <div class="col-md-2">Monograph</div>
+    <div class="col-md-2">FileSet</div>
     <div class="col-md-2">Expiration</div>
-    <div class="col-md-2">Display</div>
-    <div class="col-md-2">Download</div>
+    <div class="col-md-3">Display</div>
+    <div class="col-md-3">Download</div>
   </div>
   <div class="col-md-12"><hr/></div>
   <% @tombstones.each do |tombstone| %>
     <div class="col-md-12">
-      <div class="col-md-3"><%= link_to tombstone['monograph_id_ssim'].first, monograph_catalog_path(tombstone['monograph_id_ssim'].first) %></div>
-      <div class="col-md-3"><%= link_to tombstone['id'], hyrax_file_set_path(tombstone['id']) %></div>
+      <% if  tombstone['monograph_id_ssim'].present? %>
+        <div class="col-md-2"><%= link_to tombstone['monograph_id_ssim'].first, monograph_catalog_path(tombstone['monograph_id_ssim'].first) %></div>
+      <% else %>
+        <div class="col-md-2">nil</div>
+    <% end %>
+      <div class="col-md-2"><%= link_to tombstone['id'], hyrax_file_set_path(tombstone['id']) %></div>
       <div class="col-md-2"><%= "#{tombstone['permissions_expiration_date_ssim']&.first}" %></div>
-      <div class="col-md-2"><%= "#{tombstone['allow_display_after_expiration_ssim']&.first}" %></div>
-      <div class="col-md-2"><%= "#{tombstone['allow_download_after_expiration_ssim']&.first}" %></div>
+      <div class="col-md-3"><%= "#{tombstone['allow_display_after_expiration_ssim']&.first}" %></div>
+      <div class="col-md-3"><%= "#{tombstone['allow_download_after_expiration_ssim']&.first}" %></div>
     </div>
 <% end %>
   <div class="col-md-12"><br></div>
