--- a/app/views/hyrax/file_sets/_media.html.erb
+++ b/app/views/hyrax/file_sets/_media.html.erb
@@ -1,5 +1,5 @@
 <% if @presenter.tombstone? %>
-  Rights have expired. This resource can no longer be displayed.
+ <%= render partial: 'media_tombstone', locals: { presenter: @presenter } %>
 <% else %>
   <figure title="<%= @presenter.alt_text.first %>">
     <%= render partial: @presenter.heliotrope_media_partial, locals: { file_set: @presenter } %>
