--- a/app/views/e_pubs/show_pdf.html.erb
+++ b/app/views/e_pubs/show_pdf.html.erb
@@ -526,8 +526,8 @@
           '<button id="viewThumbnail" class="toolbarButton toggled" title="Show Thumbnails" tabindex="-1" data-l10n-id="thumbs">' +
           '<span data-l10n-id="thumbs_label">Thumbnails</span>' +
           '</button>' +
-          '<button id="viewOutline" class="toolbarButton" title="Show Document Outline (double-click to expand/collapse all items)" tabindex="-1" data-l10n-id="document_outline">' +
-          '<span data-l10n-id="document_outline_label">Document Outline</span>' +
+          '<button id="viewOutline" class="toolbarButton" title="Show Table of Contents (double-click to expand/collapse all items)" tabindex="-1" data-l10n-id="outline">' +
+          '<span data-l10n-id="outline_label">Table of Contents</span>' +
           '</button>' +
           '<button id="viewAttachments" class="toolbarButton" title="Show Attachments" tabindex="-1" data-l10n-id="attachments">' +
           '<span data-l10n-id="attachments_label">Attachments</span>' +
