--- a/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
@@ -12,7 +12,12 @@
             center: [0, 0],
             crs: L.CRS.Simple,
             zoom: 0,
-            scrollWheelZoom: false
+            scrollWheelZoom: false,
+            fullscreenControl: true,
+            fullscreenControlOptions: { // optional
+                title:"Show me the fullscreen!",
+                titleCancel:"Exit fullscreen mode"
+            }
         });
         layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true } );
         layer.addTo(map);
