--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -15,7 +15,7 @@
     function throttleLeafletMapSetup(milliseconds) {
       clearTimeout (timer);
       timer = setTimeout(setupLeafletMap, milliseconds);
-    };
+    }
 
     function setupLeafletMap() {
       if (map != undefined) { map.off(); map.remove(); }
@@ -24,13 +24,18 @@
           crs: L.CRS.Simple,
           zoom: 0,
           scrollWheelZoom: false,
+          fullscreenControl: true,
+          fullscreenControlOptions: { // optional
+              title:"Show me the fullscreen!",
+              titleCancel:"Exit fullscreen mode"
+          },
           attributionControl: false
         });
         layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true });
         layer.addTo(map);
         L.control.pan({ panOffset: 150 }).addTo(map);
         setupLeafletAnalytics();
-    };
+    }
 
     function setupLeafletAnalytics() {
       if (typeof(ga) == typeof(Function)) {
@@ -51,6 +56,9 @@
         });
         $('a.leaflet-control-zoom-out').click(function() {
           ga('pressTracker.send', 'event', 'e_reader', 'leaflet_zoom_out', window.location.href);
+        });
+        $('a.leaflet-control-zoom-fullscreen').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'fullscreen', window.location.href);
         });
       }
     }
