--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -449,6 +449,7 @@ footer.press {
 
   .monograph-cover {
     .modal {
+      text-align: center;
       img {
         max-width: 100%;
         max-height: 100%;
