--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -6,14 +6,31 @@
   <div class="col-sm-3 monograph-cover">
     <% if @presenter.representative_id.present? %>
       <!-- Image trigger modal -->
-      <button type="button" class="btn btn-link" data-toggle="modal" data-target="#modalImage">
+      <button type="button" class="btn btn-link" aria-label="Select to enlarge cover" data-toggle="modal" data-target="#modalImage">
         <%= raw @presenter.work_thumbnail(225) %>
       </button>
 
       <!-- Modal image trigger close -->
-      <div class="modal fade" id="modalImage" tabindex="-1" role="dialog" aria-labelledby="modalImageLabel">
-        <%= image_tag(riiif.image_path(@presenter.representative_id, :full, :full, 0), alt: @presenter.representative_alt_text, type: "button", data: { dismiss: "modal" }) %>
+      <div class="modal fade" id="modalImage" tabindex="-1" role="dialog" aria-label="Select the escape key to close the modal window">
+        <%= image_tag(riiif.image_path(@presenter.representative_id, :full, :full, 0), alt: '') %>
       </div>
+
+      <script type="text/javascript">
+          $(document).on('turbolinks:load', function() {
+              console.log("javascript");
+
+              $('#modalImage').on('show.bs.modal', function () {
+                  console.log("hello world!");
+                  $('#modalImage').focus();
+              });
+
+              $('#modalImage').on('shown.bs.modal', function () {
+                  console.log("goodbye world!");
+                  $('#modalImage').focus();
+
+              });
+          });
+      </script>
     <% else %>
       <%= raw @presenter.work_thumbnail(225) %>
     <% end %>
