--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -448,6 +448,15 @@ footer.press {
   }
 
   .monograph-cover {
+    .modal {
+      text-align: center;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+      }
+    }
     img {
       border: 4px solid #eeeeee;
     }
