--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -4,7 +4,28 @@
       <span class="Z3988" title="<%= @presenter.monograph_coins_title %>"></span>
   <% end %>
   <div class="col-sm-3 monograph-cover">
-    <%= raw @presenter.work_thumbnail(225) %>
+    <% if @presenter.representative_id.present? %>
+      <!-- Image trigger modal -->
+      <button type="button" class="btn btn-link" aria-label="Select to enlarge cover" data-toggle="modal" data-target="#modalImage">
+        <%= raw @presenter.work_thumbnail(225) %>
+      </button>
+
+      <!-- Modal image -->
+      <div class="modal" id="modalImage" tabindex="-1" role="dialog" aria-label="Select the escape key to close the modal window">
+        <button type="button" class="close btn btn-default" id="modalClose" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= image_tag(riiif.image_path(@presenter.representative_id, :full, :full, 0), tabindex: "-1", alt: '') %>
+      </div>
+
+      <script type="text/javascript">
+        $(document).on('turbolinks:load', function() {
+          $('#modalImage').on('shown.bs.modal', function () {
+            $('#modalClose').focus();
+          });
+        });
+      </script>
+    <% else %>
+      <%= raw @presenter.work_thumbnail(225) %>
+    <% end %>
     <% if can? :edit, @presenter %>
       <a class="btn btn-default manage-monograph-button" href="<%= main_app.monograph_show_path(@presenter.id) %>" title="<%= t('monograph_catalog.index.show_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.show_page_button') %></a>
       <a class="btn btn-default manage-monograph-button" href="<%= main_app.edit_hyrax_monograph_path(@presenter.id) %>" title="<%= t('monograph_catalog.index.edit_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.edit_page_button') %></a>
