--- a/app/views/shared/_metadata.html.erb
+++ b/app/views/shared/_metadata.html.erb
@@ -1,10 +1,10 @@
 <% if controller_name == "monograph_catalog" %>
 
-  <meta name="citation_title" content="<%= @presenter.page_title.html_safe %>">
+  <meta name="citation_title" content="<%= @presenter.page_title %>">
 
   <% if @presenter.present? %>
     <% @presenter.creator.each do |creator_name| %>
-      <meta name="citation_author" content="<%= creator_name.html_safe %>">
+      <meta name="citation_author" content="<%= creator_name %>">
     <% end %>
   <% end %>
 
@@ -15,7 +15,7 @@
 
   <% if @presenter.isbn_noformat.present? %>
     <% @presenter.isbn_noformat.each do |isbn_noformat| %>
-      <meta name="citation_isbn" content="<%= isbn_noformat.html_safe %>">
+      <meta name="citation_isbn" content="<%= isbn_noformat %>">
     <% end %>
   <% end %>
 
@@ -32,10 +32,10 @@
 
 <% elsif controller_name == "file_sets" %>
 
-  <meta name="citation_title" content="<%= @presenter.page_title.html_safe %>">
+  <meta name="citation_title" content="<%= @presenter.page_title %>">
 
   <% @presenter.creator.each do |creator_name| %>
-    <meta name="citation_author" content="<%= creator_name.html_safe %>">
+    <meta name="citation_author" content="<%= creator_name %>">
   <% end %>
 
   <% if @presenter.sort_date.present? %>
