Resolves HELIO-2453: Add FileSet actions to Monograph catalog page

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -114,6 +114,7 @@
 
   </div><!-- /.monograph-metadata -->
 </div><!-- /.monograph-info-epub -->
+<%= render partial: 'index_featured_representatives', locals: { presenter: @presenter } %>
 
 <div class="row monograph-assets-toc-epub">
   <div class="col-sm-12" id="tabs">
