aria-haspopus typo

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -88,7 +88,7 @@
                           target="_blank"
                           title="<%= t('monograph_catalog.index.download', title: @presenter.page_title) %>"
                           aria-label="<%= t('monograph_catalog.index.download', title: @presenter.page_title) %>"
-                          aria-haspopus="true"
+                          aria-haspopup="true"
                           class="btn btn-default dropdown-toggle"
                           data-toggle="dropdown"
                           aria-expanded="false">
