--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -24,11 +24,12 @@
           crs: L.CRS.Simple,
           zoom: 0,
           scrollWheelZoom: false,
-          fullscreenControl: true,
-          fullscreenControlOptions: { // optional
-              title:"Show me the fullscreen!",
-              titleCancel:"Exit fullscreen mode"
-          },
+          // TODO: fix
+          // fullscreenControl: true,
+          // fullscreenControlOptions: { // optional
+          //     title:"Show me the fullscreen!",
+          //     titleCancel:"Exit fullscreen mode"
+          // },
           attributionControl: false
         });
         layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true });
@@ -57,9 +58,10 @@
         $('a.leaflet-control-zoom-out').click(function() {
           ga('pressTracker.send', 'event', 'e_reader', 'leaflet_zoom_out', window.location.href);
         });
-        $('a.leaflet-control-zoom-fullscreen').click(function() {
-          ga('pressTracker.send', 'event', 'e_reader', 'fullscreen', window.location.href);
-        });
+        // TODO: fix
+        // $('a.leaflet-control-zoom-fullscreen').click(function() {
+        //   ga('pressTracker.send', 'event', 'e_reader', 'fullscreen', window.location.href);
+        // });
       }
     }
 
