--- a/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
@@ -15,7 +15,7 @@
             scrollWheelZoom: false,
             fullscreenControl: true,
             fullscreenControlOptions: { // optional
-                title:"Show me the fullscreen!",
+                title:"View in fullscreen mode",
                 titleCancel:"Exit fullscreen mode"
             }
         });
