--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -24,10 +24,10 @@
           crs: L.CRS.Simple,
           zoom: 0,
           scrollWheelZoom: false,
-          // TODO: fix
+          // TODO: fix https://tools.lib.umich.edu/jira/browse/HELIO-2961
           // fullscreenControl: true,
           // fullscreenControlOptions: { // optional
-          //     title:"Show me the fullscreen!",
+          //     title:"View in fullscreen mode",
           //     titleCancel:"Exit fullscreen mode"
           // },
           attributionControl: false
@@ -58,7 +58,7 @@
         $('a.leaflet-control-zoom-out').click(function() {
           ga('pressTracker.send', 'event', 'e_reader', 'leaflet_zoom_out', window.location.href);
         });
-        // TODO: fix
+        // TODO: fix https://tools.lib.umich.edu/jira/browse/HELIO-2961
         // $('a.leaflet-control-zoom-fullscreen').click(function() {
         //   ga('pressTracker.send', 'event', 'e_reader', 'fullscreen', window.location.href);
         // });
